Fix Teaching page, menu structure, and update publications

--- a/static/files/conferences_final.bib
+++ b/static/files/conferences_final.bib
@@ -157,6 +157,49 @@ Credentials},
  year = {2023}
 }
 
+@inproceedings{DBLP:conf/aft/KwonKYK19,
+ author = {Yujin Kwon and
+Hyoungshick Kim and
+Yung Yi and
+Yongdae Kim},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/aft/KwonKYK19.bib},
+ booktitle = {Proceedings of the 1st {ACM} Conference on Advances in Financial Technologies,
+{AFT} 2019, Zurich, Switzerland, October 21-23, 2019},
+ doi = {10.1145/3318041.3355472},
+ editor = {Ittai Abraham and
+Ittay Eyal and
+Emin G{\"{u}}n Sirer},
+ pages = {169--182},
+ publisher = {{ACM}},
+ timestamp = {Tue, 21 Mar 2023 00:00:00 +0100},
+ title = {An Eye for an Eye: Economics of Retaliation in Mining Pools},
+ url = {https://doi.org/10.1145/3318041.3355472},
+ year = {2019}
+}
+
+@inproceedings{DBLP:conf/aft/KwonLKSK19,
+ author = {Yujin Kwon and
+Jian Liu and
+Minjeong Kim and
+Dawn Song and
+Yongdae Kim},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/aft/KwonLKSK19.bib},
+ booktitle = {Proceedings of the 1st {ACM} Conference on Advances in Financial Technologies,
+{AFT} 2019, Zurich, Switzerland, October 21-23, 2019},
+ doi = {10.1145/3318041.3355463},
+ editor = {Ittai Abraham and
+Ittay Eyal and
+Emin G{\"{u}}n Sirer},
+ pages = {110--123},
+ publisher = {{ACM}},
+ timestamp = {Mon, 06 Oct 2025 14:28:11 +0200},
+ title = {Impossibility of Full Decentralization in Permissionless Blockchains},
+ url = {https://doi.org/10.1145/3318041.3355463},
+ year = {2019}
+}
+
 @inproceedings{DBLP:conf/asiaccs/Kim22,
  author = {Yongdae Kim},
  bibsource = {dblp computer science bibliography, https://dblp.org},
@@ -303,7 +346,7 @@ Communications Security, Denver, CO, USA, October 12-16, 2015},
  editor = {Indrajit Ray and
 Ninghui Li and
 Christopher Kruegel},
- impact = {At the time, only South Korea and the United States had widely deployed Voice over LTE (VoLTE) technology, so no other countries were affected.  The vulnerabilities were jointly disclosed with the},
+ impact = {At the time, only South Korea and the United States had widely deployed Voice over LTE (VoLTE) technology, so no other countries were affected. The vulnerabilities were jointly disclosed with the the US Cyber Emergency Response Team (US Cert) as VU\#943167. At the time, none of the US operators acknowledged the vulnerabilities, but they later patched them silently. After this investigation, we received funding from SK Telecom to start investigating security of LTE networks. We were invited to make a presentation at GSMA, the organization of the operators. The findings were covered by multiple media outlets, such as IT World, Nexus Security Bulletin, DSLReports, Softpedia, tom's guide, Pocketnow, FierceMobileIT, Techworm, Neowin, and Network World.},
  media = {US Cert, IT World, Nexus Security Bulletin, DSLReports, Softpedia, tom's guide, Pocketnow, FierceMobileIT, Techworm, Neowin},
  pages = {328--339},
  publisher = {{ACM}},
@@ -351,6 +394,32 @@ Vitaly Shmatikov},
  title = {Timing attacks on {PIN} input devices},
  url = {https://doi.org/10.1145/1866307.1866395},
  year = {2010}
+}
+
+@inproceedings{DBLP:conf/ccs/KwonKSVK17,
+ author = {Yujin Kwon and
+Dohyun Kim and
+Yunmok Son and
+Eugene Y. Vasserman and
+Yongdae Kim},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/ccs/KwonKSVK17.bib},
+ booktitle = {Proceedings of the 2017 {ACM} {SIGSAC} Conference on Computer and
+Communications Security, {CCS} 2017, Dallas, TX, USA, October 30 -
+November 03, 2017},
+ doi = {10.1145/3133956.3134019},
+ editor = {Bhavani Thuraisingham and
+David Evans and
+Tal Malkin and
+Dongyan Xu},
+ media = {ACM The Morning Paper},
+ pages = {195--209},
+ publisher = {{ACM}},
+ timestamp = {Mon, 02 Oct 2023 01:00:00 +0200},
+ title = {Be Selfish and Avoid Dilemmas: Fork After Withholding {(FAW)} Attacks
+on Bitcoin},
+ url = {https://doi.org/10.1145/3133956.3134019},
+ year = {2017}
 }
 
 @inproceedings{DBLP:conf/ccs/McLachlanTHK09,
@@ -481,52 +550,29 @@ and designs},
  year = {2010}
 }
 
-@inproceedings{DBLP:conf/ccs/MohaisenZSXK12,
+@inproceedings{DBLP:conf/ccs/MohaisenZSXK13,
  author = {Abedelaziz Mohaisen and
 Xinwen Zhang and
 Max Schuchard and
 Haiyong Xie and
 Yongdae Kim},
  bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/ccs/MohaisenZSXK12.bib},
- booktitle = {the {ACM} Conference on Computer and Communications Security, CCS'12,
-Raleigh, NC, USA, October 16-18, 2012},
- doi = {10.1145/2382196.2382305},
- editor = {Ting Yu and
-George Danezis and
-Virgil D. Gligor},
- pages = {1001--1003},
+ biburl = {https://dblp.org/rec/conf/ccs/MohaisenZSXK13.bib},
+ booktitle = {8th {ACM} Symposium on Information, Computer and Communications Security,
+{ASIA} {CCS} '13, Hangzhou, China - May 08 - 10, 2013},
+ doi = {10.1145/2484313.2484335},
+ editor = {Kefei Chen and
+Qi Xie and
+Weidong Qiu and
+Ninghui Li and
+Wen{-}Guey Tzeng},
+ pages = {173--178},
  publisher = {{ACM}},
  timestamp = {Sun, 19 Jan 2025 00:00:00 +0100},
  title = {Protecting access privacy of cached contents in information centric
 networks},
- url = {https://doi.org/10.1145/2382196.2382305},
- year = {2012}
-}
-
-@inproceedings{DBLP:conf/ccs/SchuchardMKHKV10,
- author = {Max Schuchard and
-Abedelaziz Mohaisen and
-Denis Foo Kune and
-Nicholas Hopper and
-Yongdae Kim and
-Eugene Y. Vasserman},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/conf/ccs/SchuchardMKHKV10.bib},
- booktitle = {Proceedings of the 17th {ACM} Conference on Computer and Communications
-Security, {CCS} 2010, Chicago, Illinois, USA, October 4-8, 2010},
- doi = {10.1145/1866307.1866411},
- editor = {Ehab Al{-}Shaer and
-Angelos D. Keromytis and
-Vitaly Shmatikov},
- media = {New Scientist, ZDNet, The Register},
- pages = {726--728},
- publisher = {{ACM}},
- timestamp = {Tue, 21 Mar 2023 00:00:00 +0100},
- title = {Losing control of the internet: using the data plane to attack the
-control plane},
- url = {https://doi.org/10.1145/1866307.1866411},
- year = {2010}
+ url = {https://doi.org/10.1145/2484313.2484335},
+ year = {2013}
 }
 
 @inproceedings{DBLP:conf/ccs/SonKOPK25,
@@ -597,6 +643,30 @@ Dawn Song},
 system for outsourced storage},
  url = {https://doi.org/10.1145/1655008.1655017},
  year = {2009}
+}
+
+@inproceedings{DBLP:conf/ches/ShinKKK17,
+ author = {Hocheol Shin and
+Dohyun Kim and
+Yujin Kwon and
+Yongdae Kim},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/ches/ShinKKK17.bib},
+ booktitle = {Cryptographic Hardware and Embedded Systems - {CHES} 2017 - 19th International
+Conference, Taipei, Taiwan, September 25-28, 2017, Proceedings},
+ doi = {10.1007/978-3-319-66787-4\_22},
+ editor = {Wieland Fischer and
+Naofumi Homma},
+ media = {The Register},
+ pages = {445--467},
+ publisher = {Springer},
+ series = {Lecture Notes in Computer Science},
+ timestamp = {Mon, 02 Oct 2023 01:00:00 +0200},
+ title = {Illusion and Dazzle: Adversarial Optical Channel Exploits Against
+Lidars for Automotive Applications},
+ url = {https://doi.org/10.1007/978-3-319-66787-4\_22},
+ volume = {10529},
+ year = {2017}
 }
 
 @inproceedings{DBLP:conf/conext/KimCNCCHKLH16,
@@ -671,6 +741,48 @@ Yongdae Kim},
 in IPv6 Cellular Networks},
  url = {https://doi.org/10.1109/EuroSP.2017.34},
  year = {2017}
+}
+
+@inproceedings{DBLP:conf/eurosp/KimKK19,
+ author = {Minjeong Kim and
+Yujin Kwon and
+Yongdae Kim},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/eurosp/KimKK19.bib},
+ booktitle = {2019 {IEEE} European Symposium on Security and Privacy Workshops,
+EuroS{\&}P Workshops 2019, Stockholm, Sweden, June 17-19, 2019},
+ doi = {10.1109/EUROSPW.2019.00048},
+ media = {Cointelegraph: Stellar’s Blockchain Briefly Goes Offline, Confirming the Project Lacks Decentralization, Safety vs. Liveness in the Stellar Network, David Mazi\'eres},
+ pages = {377--385},
+ publisher = {{IEEE}},
+ timestamp = {Tue, 21 Mar 2023 00:00:00 +0100},
+ title = {Is Stellar As Secure As You Think?},
+ url = {https://doi.org/10.1109/EuroSPW.2019.00048},
+ website = {https://sites.google.com/view/stellar-analysis},
+ year = {2019}
+}
+
+@inproceedings{DBLP:conf/fc/CheonHKO06,
+ author = {Jung Hee Cheon and
+Nicholas Hopper and
+Yongdae Kim and
+Ivan Osipkov},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/fc/CheonHKO06.bib},
+ booktitle = {Financial Cryptography and Data Security, 10th International Conference,
+{FC} 2006, Anguilla, British West Indies, February 27-March 2, 2006,
+Revised Selected Papers},
+ doi = {10.1007/11889663\_17},
+ editor = {Giovanni Di Crescenzo and
+Aviel D. Rubin},
+ pages = {191--205},
+ publisher = {Springer},
+ series = {Lecture Notes in Computer Science},
+ timestamp = {Tue, 21 Mar 2023 00:00:00 +0100},
+ title = {Timed-Release and Key-Insulated Public Key Encryption},
+ url = {https://doi.org/10.1007/11889663\_17},
+ volume = {4107},
+ year = {2006}
 }
 
 @inproceedings{DBLP:conf/fgit/ChoiKHY11,
@@ -1117,6 +1229,32 @@ FL, USA, October 29 - November 1, 2012},
  year = {2012}
 }
 
+@inproceedings{DBLP:conf/mobicom/OhBALHKTK24,
+ author = {Taekkyung Oh and
+Sangwook Bae and
+Junho Ahn and
+Yonghwa Lee and
+Tuan Dinh Hoang and
+Min Suk Kang and
+Nils Ole Tippenhauer and
+Yongdae Kim},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/mobicom/OhBALHKTK24.bib},
+ booktitle = {Proceedings of the 30th Annual International Conference on Mobile
+Computing and Networking, {ACM} MobiCom 2024, Washington D.C., DC,
+USA, November 18-22, 2024},
+ doi = {10.1145/3636534.3690709},
+ editor = {Weisong Shi and
+Deepak Ganesan and
+Nicholas D. Lane},
+ pages = {1530--1544},
+ publisher = {{ACM}},
+ timestamp = {Mon, 03 Mar 2025 00:00:00 +0100},
+ title = {Enabling Physical Localization of Uncooperative Cellular Devices},
+ url = {https://doi.org/10.1145/3636534.3690709},
+ year = {2024}
+}
+
 @inproceedings{DBLP:conf/mobisys/KimKWKS22,
  author = {Joongyum Kim and
 Jihwan Kim and
@@ -1186,7 +1324,7 @@ Yongdae Kim},
  biburl = {https://dblp.org/rec/conf/ndss/HongBK18.bib},
  booktitle = {25th Annual Network and Distributed System Security Symposium, {NDSS}
 2018, San Diego, California, USA, February 18-21, 2018},
- impact = {Our first paper~},
+ impact = {Our first paper~kune2012location in 2012 was discussed in three SA3 meetings held in 2017 across multiple documents: TSG3\_086\_Sophia~SA3 meeting as part of 86th 3GPP meeting held in Sophia (S3-170205, S3-170333, S3-170458). TSGS3\_86b\_Busan (S3-170758), and TSGS3\_87\_Ljubljana (S3-171294). GUTI reallocation paper~hong2018guti was the focal point to add unpredictability of GUTI in LTE, discussed in S3-220075. Now in 5G, unpredictability in GUTI after every exposure is mandatory. Unfortunately, a recent report about China and our measurement in Korea show that this is not the case.},
  publisher = {The Internet Society},
  timestamp = {Thu, 15 Jun 2023 01:00:00 +0200},
  title = {{GUTI} Reallocation Demystified: Cellular Location Tracking with Changing
@@ -1260,7 +1398,7 @@ Yongdae Kim},
  biburl = {https://dblp.org/rec/conf/ndss/KuneKHK12.bib},
  booktitle = {19th Annual Network and Distributed System Security Symposium, {NDSS}
 2012, San Diego, California, USA, February 5-8, 2012},
- impact = {Our first paper~},
+ impact = {Our first paper~kune2012location in 2012 was discussed in three SA3 meetings held in 2017 across multiple documents: TSG3\_086\_Sophia~SA3 meeting as part of 86th 3GPP meeting held in Sophia (S3-170205, S3-170333, S3-170458). TSGS3\_86b\_Busan (S3-170758), and TSGS3\_87\_Ljubljana (S3-171294). GUTI reallocation paper~hong2018guti was the focal point to add unpredictability of GUTI in LTE, discussed in S3-220075. Now in 5G, unpredictability in GUTI after every exposure is mandatory. Unfortunately, a recent report about China and our measurement in Korea show that this is not the case.},
  media = {Ars Technica},
  publisher = {The Internet Society},
  timestamp = {Mon, 01 Feb 2021 08:42:14 +0100},
@@ -1308,6 +1446,27 @@ Yongdae Kim},
  title = {Preventing {SIM} Box Fraud Using Device Model Fingerprinting},
  url = {https://www.ndss-symposium.org/ndss-paper/preventing-sim-box-fraud-using-device-model-fingerprinting/},
  year = {2023}
+}
+
+@inproceedings{DBLP:conf/ndss/SchuchardMKHKV11,
+ author = {Max Schuchard and
+Abedelaziz Mohaisen and
+Denis Foo Kune and
+Nicholas Hopper and
+Yongdae Kim and
+Eugene Y. Vasserman},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/ndss/SchuchardMKHKV11.bib},
+ booktitle = {Proceedings of the Network and Distributed System Security Symposium,
+{NDSS} 2011, San Diego, California, USA, 6th February - 9th February
+2011},
+ media = {New Scientist, ZDNet, The Register},
+ publisher = {The Internet Society},
+ timestamp = {Mon, 01 Feb 2021 08:42:10 +0100},
+ title = {Losing Control of the Internet: Using the Data Plane to Attack the
+Control Plane},
+ url = {https://www.ndss-symposium.org/ndss2011/losing-control-internet-using-data-plane-attack-control-plane},
+ year = {2011}
 }
 
 @inproceedings{DBLP:conf/ndss/SchuchardTHK12,
@@ -1598,7 +1757,7 @@ Yongdae Kim},
 CA, USA, May 19-23, 2019},
  cves = {CVE-2019-20783, CVE-2019-20783, CVE-2019-5307},
  doi = {10.1109/SP.2019.00038},
- impact = {Immediately after the paper is published online, we've received inquiries from many operators such as Deutche Telecom, Google Project Fi, Singtel, etc if we can visit their site to test their networks. Unfortunately, we could not provide service to commercial operators, as students did not want to provide commercial services. We've also communicated with device vendors such as Apple, Samsung, Qualcomm, LG, Huawei, and Ericsson helping their patching process. Cellular security companies such as},
+ impact = {Immediately after the paper is published online, we've received inquiries from many operators such as Deutche Telecom, Google Project Fi, Singtel, etc if we can visit their site to test their networks. Unfortunately, we could not provide service to commercial operators, as students did not want to provide commercial services. We've also communicated with device vendors such as Apple, Samsung, Qualcomm, LG, Huawei, and Ericsson helping their patching process. Cellular security companies such as P1Security and Positive Technologies now provide protocol security testing as we did in LTEFuzz. We have received two CVEs (CVE-2019-20783 from LG and CVE-2019-5307 from Huawei.) This was also featured in multple media outlets, such as ZDNet, SecurityWeek, Huawei, Engadget, Tech Xplore, Security Affairs, E-Crypto, Cybersecurity Insiders, Israel Defense, ITPro, UK, TGDaily, Gizmodo, and DailyMail, UK. LTEFuzz paper was discussed in three SA3 meetings: TSGS3\_95\_Reno (S3-191230), TSGS3\_97\_Reno (S3-194063). TSGS3\_101e (S3-202878).},
  media = {ZDNet, SecurityWeek, Huawei, Engadget, Tech Xplore, Security Affairs, E-Crypto, Cybersecurity Insiders, Israel Defense, ITPro, UK},
  pages = {1153--1168},
  publisher = {{IEEE}},
@@ -1632,6 +1791,24 @@ CA, USA, May 19-22, 2013},
 Sensors},
  url = {https://doi.org/10.1109/SP.2013.20},
  year = {2013}
+}
+
+@inproceedings{DBLP:conf/sp/KwonKSK19,
+ author = {Yujin Kwon and
+Hyoungshick Kim and
+Jinwoo Shin and
+Yongdae Kim},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/conf/sp/KwonKSK19.bib},
+ booktitle = {2019 {IEEE} Symposium on Security and Privacy, {SP} 2019, San Francisco,
+CA, USA, May 19-23, 2019},
+ doi = {10.1109/SP.2019.00075},
+ pages = {935--951},
+ publisher = {{IEEE}},
+ timestamp = {Tue, 21 Mar 2023 00:00:00 +0100},
+ title = {Bitcoin vs. Bitcoin Cash: Coexistence or Downfall of Bitcoin Cash?},
+ url = {https://doi.org/10.1109/SP.2019.00075},
+ year = {2019}
 }
 
 @inproceedings{DBLP:conf/sp/YanSBXKF20,
@@ -1706,7 +1883,7 @@ Yongdae Kim},
 MA, USA, August 10-12, 2022},
  editor = {Kevin R. B. Butler and
 Kurt Thomas},
- impact = {Although it is too early to determine the impact of the video identification work, it  was discussed in 2022 August 3GPP meeting (},
+ impact = {Although it is too early to determine the impact of the video identification work, it was discussed in 2022 August 3GPP meeting (S3-221922). We plan to exploit information leakage in the uplink scheduling. If we can identify a victim's uplink signal, an attacker may use this information to find a physical location of the victim, by combining with a directional antenna. We received funding from Korean police to find the physical location of the SIM Boxes used for voice phishing.},
  pages = {1307--1324},
  publisher = {{USENIX} Association},
  timestamp = {Thu, 23 Nov 2023 00:00:00 +0100},
@@ -1730,7 +1907,7 @@ WA, USA, August 13-15, 2025},
  editor = {Lujo Bauer and
 Giancarlo Pellegrino},
  github = {https://github.com/SysSec-KAIST/LLFuzz},
- impact = {LLFuzz uncovered 11 previously unknown vulnerabilities across 15 commercial smartphones from major vendors including Qualcomm, MediaTek, Samsung, and Apple. Seven of these vulnerabilities have been assigned CVE identifiers and patched by vendors, while four remain undisclosed due to patch delays. The CVEs include:},
+ impact = {LLFuzz uncovered 11 previously unknown vulnerabilities across 15 commercial smartphones from major vendors including Qualcomm, MediaTek, Samsung, and Apple. Seven of these vulnerabilities have been assigned CVE identifiers and patched by vendors, while four remain undisclosed due to patch delays. The CVEs include: itemize Qualcomm: CVE-2025-21477, CVE-2024-23385 -- affecting over 90 chipsets. MediaTek: CVE-2024-20076, CVE-2024-20077, CVE-2025-20659 -- affecting over 80 chipsets. Samsung: CVE-2025-26780 -- affecting Exynos 2400 series and Modem 5400. Apple: CVE-2024-27870 -- equivalent to CVE-2025-21477 in Qualcomm modems. itemize LLFuzz revealed systemic flaws in how lower-layer baseband logic is implemented across vendors. In one test, a single malformed MAC-layer packet immediately disabled a device during data streaming. These results demonstrate that lower layers remain a blind spot in mobile security. LLFuzz is open-sourced at https://github.com/SysSec-KAIST/LLFuzz.},
  pages = {5267--5286},
  publisher = {{USENIX} Association},
  timestamp = {Fri, 31 Oct 2025 16:06:43 +0100},
@@ -1778,7 +1955,7 @@ MA, USA, August 10-12, 2022},
  editor = {Kevin R. B. Butler and
 Kurt Thomas},
  github = {https://github.com/SysSec-KAIST/DoLTEst},
- impact = {This paper was discussed in a},
+ impact = {This paper was discussed in a 3GPP SA3 meeting. It is currently open-sourced at https://github.com/SysSec-KAIST/DoLTEst. We uncovered 26 implementation flaws from 43 devices from 5 different baseband manufacturers by using DoLTEst. We have received 3 CVEs (CVE-2019-2289 from Qualcomm, CVE-2021-25516 from Samsung, and CVE-2021-30826 from Apple.) The Qualcomm bug allows an authentication bypass in all baseband processors manufactured by Qualcomm, requiring almost one year to finish the patch process.},
  pages = {1325--1342},
  publisher = {{USENIX} Association},
  timestamp = {Tue, 18 Oct 2022 01:00:00 +0200},
@@ -1864,7 +2041,7 @@ CA, USA, August 14-16, 2019},
  editor = {Nadia Heninger and
 Patrick Traynor},
  github = {https://github.com/SysSec-KAIST/sigover_injector},
- impact = {The initial response from GSMA was disappointing as they viewed this work as only academically interesting. However, it turned out to be important for both academia and standard bodies. After it was initially discussed in  2019 Reno 97th 3GPP meeting (},
+ impact = {The initial response from GSMA was disappointing as they viewed this work as only academically interesting. However, it turned out to be important for both academia and standard bodies. After it was initially discussed in 2019 Reno 97th 3GPP meeting (S3-194063), a lot of documents (and probably discussions) tried to address this attack accross multiple 3GPP meetings: TSGS3\_100Bis-e (S3-202556, S3-202738, S3-202740), TSGS3\_100e (S3-202026, S3-202109, S3-202150), TSGS3\_101e (S3-202983, S3-202984, S3-203158, S3-203160, S3-203364, S3-203447), TSGS3\_102Bis-e (S3-211345), TSGS3\_102e (S3-210131, S3-210778, S3-210783), TSGS3\_103e (S3-212351), TSGS3\_104e (S3-212748, S3-213244), TSGS3\_105e (S3-214408), and TSGS3\_107e (S3-221266). In addition, the attack is extended to sigover attack over unicast channel by us~bae2022watching, layer 2 messages by Tan et. al.~tan2021data and uplink channel by Erni et. al.~erni2022adaptover. In 5G, SA3 failed to secure these unauthenticated channels due to various technical problems. I hope to solve these problems before 6G design is complete, which will start in 2 years.},
  pages = {55--72},
  publisher = {{USENIX} Association},
  timestamp = {Mon, 01 Feb 2021 08:43:12 +0100},
@@ -2124,7 +2301,7 @@ Steve Schneider and
 Bradley Reaves and
 Nils Ole Tippenhauer},
  github = {https://github.com/SysSec-KAIST/LTESniffer},
- impact = {LTESniffer is open-sourced at},
+ impact = {LTESniffer is open-sourced at https://github.com/SysSec-KAIST/LTESniffer). It is very popular in github, receiving 1,212 stars with 128 forked project. There are at least five youtube videos explaining how to use LTESniffer with more than 2k views. As far as I know, there are three commercial counterparts (Wavejudge, ThinkRF and Airscope): The first one supporting uplink and downlink sniffing costing USD 25,000 and the last one only supports downlink sniffing.},
  pages = {43--48},
  publisher = {{ACM}},
  timestamp = {Fri, 07 Jul 2023 01:00:00 +0200},
