--- a/static/files/journals_final.bib
+++ b/static/files/journals_final.bib
@@ -87,96 +87,6 @@ Services},
  year = {2011}
 }
 
-@article{DBLP:journals/corr/abs-1708-09790,
- author = {Yujin Kwon and
-Dohyun Kim and
-Yunmok Son and
-Eugene Y. Vasserman and
-Yongdae Kim},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/corr/abs-1708-09790.bib},
- eprint = {1708.09790},
- eprinttype = {arXiv},
- journal = {CoRR},
- media = {ACM The Morning Paper},
- timestamp = {Mon, 02 Oct 2023 01:00:00 +0200},
- title = {Be Selfish and Avoid Dilemmas: Fork After Withholding {(FAW)} Attacks
-on Bitcoin},
- url = {http://arxiv.org/abs/1708.09790},
- volume = {abs/1708.09790},
- year = {2017}
-}
-
-@article{DBLP:journals/corr/abs-1902-11064,
- author = {Yujin Kwon and
-Hyoungshick Kim and
-Jinwoo Shin and
-Yongdae Kim},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/corr/abs-1902-11064.bib},
- eprint = {1902.11064},
- eprinttype = {arXiv},
- journal = {CoRR},
- timestamp = {Tue, 21 May 2019 01:00:00 +0200},
- title = {Bitcoin vs. Bitcoin Cash: Coexistence or Downfall of Bitcoin Cash?},
- url = {http://arxiv.org/abs/1902.11064},
- volume = {abs/1902.11064},
- year = {2019}
-}
-
-@article{DBLP:journals/corr/abs-1904-13302,
- author = {Minjeong Kim and
-Yujin Kwon and
-Yongdae Kim},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/corr/abs-1904-13302.bib},
- eprint = {1904.13302},
- eprinttype = {arXiv},
- journal = {CoRR},
- media = {Cointelegraph: Stellar’s Blockchain Briefly Goes Offline, Confirming the Project Lacks Decentralization, Safety vs. Liveness in the Stellar Network, David Mazi\'eres},
- timestamp = {Thu, 02 May 2019 01:00:00 +0200},
- title = {Is Stellar As Secure As You Think?},
- url = {http://arxiv.org/abs/1904.13302},
- volume = {abs/1904.13302},
- website = {https://sites.google.com/view/stellar-analysis},
- year = {2019}
-}
-
-@article{DBLP:journals/corr/abs-1905-05158,
- author = {Yujin Kwon and
-Jian Liu and
-Minjeong Kim and
-Dawn Song and
-Yongdae Kim},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/corr/abs-1905-05158.bib},
- eprint = {1905.05158},
- eprinttype = {arXiv},
- journal = {CoRR},
- timestamp = {Wed, 14 Aug 2024 01:00:00 +0200},
- title = {Impossibility of Full Decentralization in Permissionless Blockchains},
- url = {http://arxiv.org/abs/1905.05158},
- volume = {abs/1905.05158},
- year = {2019}
-}
-
-@article{DBLP:journals/corr/abs-1908-10781,
- author = {Yujin Kwon and
-Hyoungshick Kim and
-Yung Yi and
-Yongdae Kim},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/corr/abs-1908-10781.bib},
- eprint = {1908.10781},
- eprinttype = {arXiv},
- journal = {CoRR},
- timestamp = {Thu, 29 Aug 2019 01:00:00 +0200},
- title = {An Eye for an Eye: Economics of Retaliation in Mining Pools},
- url = {http://arxiv.org/abs/1908.10781},
- volume = {abs/1908.10781},
- year = {2019}
-}
-
 @article{DBLP:journals/corr/abs-2004-04294,
  author = {Geunwoo Lim and
 Yujin Kwon and
@@ -190,25 +100,6 @@ Yongdae Kim},
  title = {Analysis of {LFT2}},
  url = {https://arxiv.org/abs/2004.04294},
  volume = {abs/2004.04294},
- year = {2020}
-}
-
-@article{DBLP:journals/corr/abs-2011-10749,
- author = {Dongkwan Kim and
-Eunsoo Kim and
-Sang Kil Cha and
-Sooel Son and
-Yongdae Kim},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/corr/abs-2011-10749.bib},
- eprint = {2011.10749},
- eprinttype = {arXiv},
- journal = {CoRR},
- timestamp = {Thu, 23 Nov 2023 00:00:00 +0100},
- title = {Revisiting Binary Code Similarity Analysis using Interpretable Feature
-Engineering and Lessons Learned},
- url = {https://arxiv.org/abs/2011.10749},
- volume = {abs/2011.10749},
  year = {2020}
 }
 
@@ -234,28 +125,6 @@ Security of Bitcoin 'Forks' in the Wild},
  year = {2022}
 }
 
-@article{DBLP:journals/corr/abs-2403-14963,
- author = {Taekkyung Oh and
-Sangwook Bae and
-Junho Ahn and
-Yonghwa Lee and
-Dinh{-}Tuan Hoang and
-Min Suk Kang and
-Nils Ole Tippenhauer and
-Yongdae Kim},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/corr/abs-2403-14963.bib},
- doi = {10.48550/ARXIV.2403.14963},
- eprint = {2403.14963},
- eprinttype = {arXiv},
- journal = {CoRR},
- timestamp = {Tue, 09 Apr 2024 01:00:00 +0200},
- title = {Enabling Physical Localization of Uncooperative Cellular Devices},
- url = {https://doi.org/10.48550/arXiv.2403.14963},
- volume = {abs/2403.14963},
- year = {2024}
-}
-
 @article{DBLP:journals/ecra/JaiswalKG04,
  author = {Ashutosh Jaiswal and
 Yongdae Kim and
@@ -270,21 +139,6 @@ Maria L. Gini},
  title = {Design and implementation of a secure multi-agent marketplace},
  url = {https://doi.org/10.1016/j.elerap.2004.06.005},
  volume = {3},
- year = {2004}
-}
-
-@article{DBLP:journals/iacr/CheonHKO04,
- author = {Jung Hee Cheon and
-Nicholas Hopper and
-Yongdae Kim and
-Ivan Osipkov},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/iacr/CheonHKO04.bib},
- journal = {{IACR} Cryptol. ePrint Arch.},
- pages = {231},
- timestamp = {Mon, 11 May 2020 01:00:00 +0200},
- title = {Timed-Release and Key-Insulated Public Key Encryption},
- url = {http://eprint.iacr.org/2004/231},
  year = {2004}
 }
 
@@ -332,20 +186,6 @@ Yongdae Kim},
  year = {2013}
 }
 
-@article{DBLP:journals/iacr/KimPT02,
- author = {Yongdae Kim and
-Adrian Perrig and
-Gene Tsudik},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/iacr/KimPT02.bib},
- journal = {{IACR} Cryptol. ePrint Arch.},
- pages = {9},
- timestamp = {Mon, 11 May 2020 01:00:00 +0200},
- title = {Tree-based Group Key Agreement},
- url = {http://eprint.iacr.org/2002/009},
- year = {2002}
-}
-
 @article{DBLP:journals/iacr/KimY14,
  author = {Yongdae Kim and
 Hyunsoo Yoon},
@@ -358,39 +198,6 @@ Hyunsoo Yoon},
 of {LEA}},
  url = {http://eprint.iacr.org/2014/999},
  year = {2014}
-}
-
-@article{DBLP:journals/iacr/ShinKKK17,
- author = {Hocheol Shin and
-Dohyun Kim and
-Yujin Kwon and
-Yongdae Kim},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/iacr/ShinKKK17.bib},
- journal = {{IACR} Cryptol. ePrint Arch.},
- media = {The Register},
- pages = {613},
- timestamp = {Mon, 02 Oct 2023 01:00:00 +0200},
- title = {Illusion and Dazzle: Adversarial Optical Channel Exploits against
-Lidars for Automotive Applications},
- url = {http://eprint.iacr.org/2017/613},
- year = {2017}
-}
-
-@article{DBLP:journals/iacr/ShinNKK20,
- author = {Hocheol Shin and
-Juhwan Noh and
-Dohyun Kim and
-Yongdae Kim},
- bibsource = {dblp computer science bibliography, https://dblp.org},
- biburl = {https://dblp.org/rec/journals/iacr/ShinNKK20.bib},
- journal = {{IACR} Cryptol. ePrint Arch.},
- pages = {562},
- timestamp = {Mon, 02 Oct 2023 01:00:00 +0200},
- title = {The System That Cried Wolf: Sensor Security Analysis of Wide-area
-Smoke Detectors for Critical Infrastructure},
- url = {https://eprint.iacr.org/2020/562},
- year = {2020}
 }
 
 @article{DBLP:journals/ieeesp/KimKKJK21,
@@ -679,6 +486,23 @@ and Practical Detection in Power Grids},
  year = {2025}
 }
 
+@article{DBLP:journals/tissec/KimPT04,
+ author = {Yongdae Kim and
+Adrian Perrig and
+Gene Tsudik},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/journals/tissec/KimPT04.bib},
+ doi = {10.1145/984334.984337},
+ journal = {{ACM} Trans. Inf. Syst. Secur.},
+ number = {1},
+ pages = {60--96},
+ timestamp = {Tue, 21 Mar 2023 00:00:00 +0100},
+ title = {Tree-based group key agreement},
+ url = {https://doi.org/10.1145/984334.984337},
+ volume = {7},
+ year = {2004}
+}
+
 @article{DBLP:journals/tissec/NohKSSKCK19,
  author = {Juhwan Noh and
 Yujin Kwon and
@@ -699,6 +523,25 @@ Spoofing},
  url = {https://doi.org/10.1145/3309735},
  volume = {22},
  year = {2019}
+}
+
+@article{DBLP:journals/tissec/ShinNKK20,
+ author = {Hocheol Shin and
+Juhwan Noh and
+Dohyun Kim and
+Yongdae Kim},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/journals/tissec/ShinNKK20.bib},
+ doi = {10.1145/3393926},
+ journal = {{ACM} Trans. Priv. Secur.},
+ number = {3},
+ pages = {15:1--15:32},
+ timestamp = {Sun, 19 Jan 2025 00:00:00 +0100},
+ title = {The System That Cried Wolf: Sensor Security Analysis of Wide-area
+Smoke Detectors for Critical Infrastructure},
+ url = {https://doi.org/10.1145/3393926},
+ volume = {23},
+ year = {2020}
 }
 
 @article{DBLP:journals/tissec/SonNCK18,
@@ -780,4 +623,24 @@ Gene Tsudik},
  url = {https://doi.org/10.1109/TPDS.2004.1278104},
  volume = {15},
  year = {2004}
+}
+
+@article{DBLP:journals/tse/KimKCSK23,
+ author = {Dongkwan Kim and
+Eunsoo Kim and
+Sang Kil Cha and
+Sooel Son and
+Yongdae Kim},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/journals/tse/KimKCSK23.bib},
+ doi = {10.1109/TSE.2022.3187689},
+ journal = {{IEEE} Trans. Software Eng.},
+ number = {4},
+ pages = {1661--1682},
+ timestamp = {Thu, 23 Nov 2023 00:00:00 +0100},
+ title = {Revisiting Binary Code Similarity Analysis Using Interpretable Feature
+Engineering and Lessons Learned},
+ url = {https://doi.org/10.1109/TSE.2022.3187689},
+ volume = {49},
+ year = {2023}
 }
